Simple server that response data list of user from mongoDB

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is Back-End for my project calls Grandy.",
   "main": "index.js",
   "scripts": {
-    "test": "dev"
+    "dev": "node index.js"
   },
   "repository": {
     "type": "git",
